edit file index

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <p align="right" class="lead">| Entrepreneur |<br>| Hacker |<br>| Won Imagine Cup 2013 |<br>| Loves to fly |<br>| Plays Tennis |</p>
         </div>
         <div class="overlay"></div>
-        <a href="https://nawazdhandala.com/#profile" class="scroll-down">
+        <a href="#profile" class="scroll-down">
             <span class="glyphicon glyphicon-chevron-down"></span>
         </a>
     </div>
