--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <li class=""><a href="#abilities">Abilities</a></li>
                 <li class=""><a href="#interests">Interests</a></li>
                 <li class=""><a href="#contact">Contact</a></li>
-                <li><a href="https://medium.com/@nawazdhandala" target="_blank">Blog</a></li>
+                <li><a href="https://medium.com/@hungdha" target="_blank">Blog</a></li>
             </ul>
         </div><!-- /.navbar-collapse -->
     </nav>
@@ -1324,13 +1324,13 @@
                         <li>
                             <a href="http://twitter.com/hotcomputerwork" target="_blank">
                                 <span class="icon icon-twitter"></span>
-                                http://twitter.com/nawazdhandala
+                                http://twitter.com/itfacker
                             </a>
                         </li>
                         <li>
                             <a href="http://linkedin.nl/in/hotcomputerworks/" target="_blank">
                                 <span class="icon icon-linkedin"></span>
-                                http://linkedin.nl/in/nawazdhandala/
+                                http://linkedin.nl/in/itfacker/
                             </a>
                         </li>
                     </ul>
@@ -1340,13 +1340,13 @@
                         <li>
                             <a href="javascript:void(0);">
                                 <span class="icon icon-skype"></span>
-                                nawazdhandala
+                                hungqt2011.info
                             </a>
                         </li>
                         <li>
-                            <a href="mailto:hotcomputerworks@hotmail.com">
+                            <a href="mailto:tuanhung.cntt@gmail.com">
                                 <span class="icon icon-email"></span>
-                                hello@nawazdhandala.com
+                                tuanhung.cntt@gmail.com
                             </a>
                         </li>
                     </ul>
