--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     </p>
                 </div>
                 <div class="col-md-4 text-center">
-                    <img src="./images/NawazDhandala.png" alt="NawazDhandala" width="246" height="246">
+                    <img src="./images/hungdha_avatar.png" alt="Hung Le" width="246" height="246">
                 </div>
                 <div class="col-md-4">
                     <h3>Details</h3>
