edit file index

--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
         <meta http-equiv="content-style-type" content="text/css">
         <meta http-equiv="content-language" content="nl">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="author" content="Nawaz Dhandala">
+        <meta name="author" content="Hung Le">
         <meta name="description" content="">
         <meta name="keywords" content="">
 
-        <title>Nawaz Dhandala | You found me.  </title>
+        <title>Hung Le | You found me.  </title>
         <!-- Bootstrap core CSS -->
         <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,600,700" rel="stylesheet" type="text/css">
         <link href="./css/bootstrap.min.css" rel="stylesheet">
         <link href="./css/style.css" rel="stylesheet">
         <link href="./css/font-awesome.min.css" rel="stylesheet">
-        <link rel="shortcut icon" href="https://nawazdhandala.com/favicon.ico" type="image/x-icon">
-        <link rel="icon" href="https://nawazdhandala.com/favicon.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="https://http://hungdha.github.io//favicon.ico" type="image/x-icon">
+        <link rel="icon" href="https://http://hungdha.github.io//favicon.ico" type="image/x-icon">
 
         <!-- Begin Inspectlet Embed Code -->
         <script type="text/javascript" async="" id="inspsync" src="./js/inspectlet.js"></script>
@@ -74,7 +74,7 @@
                 <div class="col-md-4">
                     <h3>About</h3>
                     <p>
-                        I'm an entrepreneur and a hacker. I love building things from ground up (and from the basement). I'm also a full stack developer and I get things done - super fast. I love working with passionate people who dream big and are passionate enough to change and make this world a better place to live in. Does that sound like you? If yes, I'd love if you drop me <a href="https://nawazdhandala.com/#contact"> a line.</a>
+                        I'm an entrepreneur and a hacker. I love building things from ground up (and from the basement). I'm also a full stack developer and I get things done - super fast. I love working with passionate people who dream big and are passionate enough to change and make this world a better place to live in. Does that sound like you? If yes, I'd love if you drop me <a href="https://http://hungdha.github.io//#contact"> a line.</a>
                     </p>
                 </div>
                 <div class="col-md-4 text-center">
@@ -1356,7 +1356,7 @@
             <hr>
 
             <div class="text-center">
-                <iframe id="twitter-widget-1" scrolling="no" frameborder="0" allowtransparency="true" class="twitter-share-button twitter-share-button-rendered twitter-tweet-button" title="Twitter Tweet Button" src="./js/tweet_button.b9740740e0bcf9b0657c5b11bd4388da.en.html" style="position: static; visibility: visible; width: 61px; height: 20px;" data-url="http://www.nawazdhandala.com/?ref=twitter"></iframe>
+                <iframe id="twitter-widget-1" scrolling="no" frameborder="0" allowtransparency="true" class="twitter-share-button twitter-share-button-rendered twitter-tweet-button" title="Twitter Tweet Button" src="./js/tweet_button.b9740740e0bcf9b0657c5b11bd4388da.en.html" style="position: static; visibility: visible; width: 61px; height: 20px;" data-url="http://www.http://hungdha.github.io//?ref=twitter"></iframe>
                 <script>!function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https'; if (!d.getElementById(id)) { js = d.createElement(s); js.id = id; js.src = p + '://platform.twitter.com/widgets.js'; fjs.parentNode.insertBefore(js, fjs); } }(document, 'script', 'twitter-wjs');</script>
 
 
