--- a/index.html
+++ b/index.html
@@ -1339,13 +1339,13 @@
                     <ul class="no-bullets">
                         <li>
                             <a href="javascript:void(0);">
-                                <span class="icon icon-skype"></span>
+                                <span class="fa fa-skype"></span>
                                 hungqt2011.info
                             </a>
                         </li>
                         <li>
                             <a href="mailto:tuanhung.cntt@gmail.com">
-                                <span class="icon icon-email"></span>
+                                <span class="fa fa-email"></span>
                                 tuanhung.cntt@gmail.com
                             </a>
                         </li>
