--- a/index.html
+++ b/index.html
@@ -1315,21 +1315,19 @@
             <p class="lead">
                 Drop me a line and say "hi". I reply. I really do.<br>
             </p>
-
             <hr>
-
             <div class="row">
                 <div class="col-md-6">
                     <ul class="no-bullets">
                         <li>
                             <a href="http://twitter.com/hotcomputerwork" target="_blank">
-                                <span class="icon icon-twitter"></span>
+                                <span class="fa fa-twitter-square"></span>
                                 http://twitter.com/itfacker
                             </a>
                         </li>
                         <li>
                             <a href="http://linkedin.nl/in/hotcomputerworks/" target="_blank">
-                                <span class="icon icon-linkedin"></span>
+                                <span class="fa fa-linkedin-square"></span>
                                 http://linkedin.nl/in/itfacker/
                             </a>
                         </li>
@@ -1345,21 +1343,17 @@
                         </li>
                         <li>
                             <a href="mailto:tuanhung.cntt@gmail.com">
-                                <span class="fa fa-email"></span>
+                                <span class="a fa-envelope-o"></span>
                                 tuanhung.cntt@gmail.com
                             </a>
                         </li>
                     </ul>
                 </div>
             </div>
-
             <hr>
-
             <div class="text-center">
-                <iframe id="twitter-widget-1" scrolling="no" frameborder="0" allowtransparency="true" class="twitter-share-button twitter-share-button-rendered twitter-tweet-button" title="Twitter Tweet Button" src="./js/tweet_button.b9740740e0bcf9b0657c5b11bd4388da.en.html" style="position: static; visibility: visible; width: 61px; height: 20px;" data-url="http://www.http://hungdha.github.io//?ref=twitter"></iframe>
+                <iframe id="twitter-widget-1" scrolling="no" frameborder="0" allowtransparency="true" class="twitter-share-button twitter-share-button-rendered twitter-tweet-button" title="Twitter Tweet Button" src="./js/tweet_button.b9740740e0bcf9b0657c5b11bd4388da.en.html" style="position: static; visibility: visible; width: 61px; height: 20px;" data-url="http://www.http://hungdha.github.io/?ref=twitter"></iframe>
                 <script>!function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https'; if (!d.getElementById(id)) { js = d.createElement(s); js.id = id; js.src = p + '://platform.twitter.com/widgets.js'; fjs.parentNode.insertBefore(js, fjs); } }(document, 'script', 'twitter-wjs');</script>
-
-
             </div>
         </div>
     </div>
