Update Follow Twitter

--- a/index.html
+++ b/index.html
@@ -90,9 +90,8 @@
                         <strong>Location:</strong><br>
                         I'm a traveller.
                     </p>
-
-                    <iframe id="twitter-widget-0" scrolling="no" frameborder="0" allowtransparency="true" class="twitter-follow-button twitter-follow-button-rendered" title="Twitter Follow Button" src="./js/follow_button.b9740740e0bcf9b0657c5b11bd4388da.en.html" style="position: static; visibility: visible; width: 78px; height: 28px;" data-screen-name="hotcomputerwork"></iframe>
-                    <script>!function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https'; if (!d.getElementById(id)) { js = d.createElement(s); js.id = id; js.src = p + '://platform.twitter.com/widgets.js'; fjs.parentNode.insertBefore(js, fjs); } }(document, 'script', 'twitter-wjs');</script>
+                    <a href="https://twitter.com/itfacker" class="twitter-follow-button" data-show-count="false" data-size="large" data-show-screen-name="false" data-dnt="true">Follow @itfacker</a>
+                    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
                 </div>
             </div>
         </div>
@@ -1102,7 +1101,7 @@
 
         <div class="text-center project-referal">
             <p> I contribute to the community too, Please check me out on Github </p>
-            <a href="https://github.com/hotcomputerworks" class="btn btn-primary" target="_blank">I'm on Github</a>
+            <a href="https://github.com/hungdha" class="btn btn-primary" target="_blank">I'm on Github</a>
         </div>
 
         <hr>
