--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         <link href="./css/style.css" rel="stylesheet">
         <link href="./css/font-awesome.min.css" rel="stylesheet">
         <link rel="shortcut icon" href="https://http://hungdha.github.io//favicon.ico" type="image/x-icon">
-        <link rel="icon" href="https://http://hungdha.github.io//favicon.ico" type="image/x-icon">
+        <link rel="icon" href="favicon.ico" type="image/x-icon">
 
         <!-- Begin Inspectlet Embed Code -->
-        <script type="text/javascript" async="" id="inspsync" src="./js/inspectlet.js"></script>
+        <!--<script type="text/javascript" async="" id="inspsync" src="./js/inspectlet.js"></script>-->
         <script type="text/javascript" async="" src="./js/ga.js"></script><script id="twitter-wjs" src="./js/widgets.js"></script>
 
         <!-- Angular js -->
@@ -102,9 +102,7 @@
     <p class="lead">
         Do not go where the path may lead<br>...go instead where there is no path and leave a trail.
     </p>
-
     <hr>
-
     <h3>Career</h3>
 
 
@@ -967,107 +965,43 @@
                     <li>
                         <span class="ability-title">Express</span>
                             <span class="ability-score">
-
-
                                 <span class="glyphicon glyphicon-star filled"></span>
-
-
                                 <span class="glyphicon glyphicon-star filled"></span>
-
-
                                 <span class="glyphicon glyphicon-star filled"></span>
-
-
                                 <span class="glyphicon glyphicon-star filled"></span>
-
-
                                 <span class="glyphicon glyphicon-star "></span>
-
-
                             </span>
                     </li>
-
-
-
-
                     <li>
                         <span class="ability-title">Machine Learning</span>
                             <span class="ability-score">
-
-
                                 <span class="glyphicon glyphicon-star filled"></span>
-
-
                                 <span class="glyphicon glyphicon-star filled"></span>
-
-
                                 <span class="glyphicon glyphicon-star filled"></span>
-
-
                                 <span class="glyphicon glyphicon-star"></span>
-
-
                                 <span class="glyphicon glyphicon-star "></span>
-
-
                             </span>
                     </li>
-
-
-
-
-
-
                     <li>
                         <span class="ability-title">Command line</span>
                             <span class="ability-score">
-
-
                                 <span class="glyphicon glyphicon-star filled"></span>
-
-
                                 <span class="glyphicon glyphicon-star filled"></span>
-
-
                                 <span class="glyphicon glyphicon-star filled"></span>
-
-
                                 <span class="glyphicon glyphicon-star "></span>
-
-
                                 <span class="glyphicon glyphicon-star "></span>
-
-
                             </span>
                     </li>
-
-
-
                     <li>
                         <span class="ability-title">Python</span>
                             <span class="ability-score">
-
-
                                 <span class="glyphicon glyphicon-star filled"></span>
-
-
                                 <span class="glyphicon glyphicon-star filled"></span>
-
-
                                 <span class="glyphicon glyphicon-star "></span>
-
-
                                 <span class="glyphicon glyphicon-star "></span>
-
-
                                 <span class="glyphicon glyphicon-star "></span>
-
-
                             </span>
                     </li>
-
-
-
                     <li>
                         <span class="ability-title">Ruby</span>
                             <span class="ability-score">
@@ -1116,7 +1050,7 @@
 
 
                     <li>
-                        <span class="ability-title">Hindi (I'm Indian)</span>
+                        <span class="ability-title">Viet Nam (I'm Vietnamse)</span>
                             <span class="ability-score">
 
 
