Update File Index

--- a/index.html
+++ b/index.html
@@ -16,17 +16,18 @@
         <link href="./css/bootstrap.min.css" rel="stylesheet">
         <link href="./css/style.css" rel="stylesheet">
         <link href="./css/font-awesome.min.css" rel="stylesheet">
-        <link rel="shortcut icon" href="https://http://hungdha.github.io//favicon.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
         <link rel="icon" href="favicon.ico" type="image/x-icon">
 
         <!-- Begin Inspectlet Embed Code -->
         <!--<script type="text/javascript" async="" id="inspsync" src="./js/inspectlet.js"></script>-->
-        <script type="text/javascript" async="" src="./js/ga.js"></script><script id="twitter-wjs" src="./js/widgets.js"></script>
+        <script type="text/javascript" async="" src="./js/ga.js"></script>
+        <script id="twitter-wjs" src="./js/widgets.js"></script>
 
         <!-- Angular js -->
         <script src="./js/angular.js"></script>
         <script src="./js/app.js"></script>
-    </head>
+	</head>
 <body data-spy="scroll" data-target="#navbar-example" class="fixed" ng-controller="MainController">
     <div id="top" class="jumbotron" data-position="center center" style="height: 280px;">
         <div class="container">
