Update icon contact in the footer

--- a/index.html
+++ b/index.html
@@ -1254,14 +1254,14 @@
                 <div class="col-md-6">
                     <ul class="no-bullets">
                         <li>
-                            <a href="http://twitter.com/hotcomputerwork" target="_blank">
-                                <span class="fa fa-twitter-square"></span>
+                            <a href="http://twitter.com/itfacker" target="_blank">
+                                <span class="icon icon-twitter"></span>
                                 http://twitter.com/itfacker
                             </a>
                         </li>
                         <li>
-                            <a href="http://linkedin.nl/in/hotcomputerworks/" target="_blank">
-                                <span class="fa fa-linkedin-square"></span>
+                            <a href="http://linkedin.nl/in/itfacker/" target="_blank">
+                                <span class="icon icon-linkedin"></span>
                                 http://linkedin.nl/in/itfacker/
                             </a>
                         </li>
@@ -1271,13 +1271,13 @@
                     <ul class="no-bullets">
                         <li>
                             <a href="javascript:void(0);">
-                                <span class="fa fa-skype"></span>
+                                <span class="icon icon-skype"></span>
                                 hungqt2011.info
                             </a>
                         </li>
                         <li>
                             <a href="mailto:tuanhung.cntt@gmail.com">
-                                <span class="a fa-envelope-o"></span>
+                                <span class="icon icon-email"></span>
                                 tuanhung.cntt@gmail.com
                             </a>
                         </li>
