--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <h1>I'm Hung Le</h1>
             <br>
             <br>
-            <p align="right" class="lead">| Entrepreneur |<br>| Hacker |<br>| Won Imagine Cup 2013 |<br>| Loves to fly |<br>| Plays Tennis |</p>
+            <p align="right" class="lead">| Developer |<br>| Coder |<br>| Loves to fly |<br>| Plays Tennis |</p>
         </div>
         <div class="overlay"></div>
         <a href="#profile" class="scroll-down">
@@ -75,7 +75,7 @@
                 <div class="col-md-4">
                     <h3>About</h3>
                     <p>
-                        I'm an entrepreneur and a hacker. I love building things from ground up (and from the basement). I'm also a full stack developer and I get things done - super fast. I love working with passionate people who dream big and are passionate enough to change and make this world a better place to live in. Does that sound like you? If yes, I'd love if you drop me <a href="https://http://hungdha.github.io//#contact"> a line.</a>
+                        I'm an developer and a coder. I love building things from ground up (and from the basement). I'm also a full stack developer and I get things done - super fast. I love working with passionate people who dream big and are passionate enough to change and make this world a better place to live in. Does that sound like you? If yes, I'd love if you drop me <a href="#contact"> a line.</a>
                     </p>
                 </div>
                 <div class="col-md-4 text-center">
@@ -189,7 +189,7 @@
                 <p>
                     <strong>Student Partner</strong>
                         <span class="hidden-phone">
-                            Evangelized Microsoft technologies to the student community, Participated in and won Imagine Cup 2013. Technology speaker on Windows Azure and on Windows Phone.
+                            Evangelized Microsoft technologies to the student community, Participated in and won AAA. Technology speaker on Windows Azure and on Windows Phone.
                         </span>
                         <span class="experience-details">
                             <span class="location">
@@ -223,7 +223,7 @@
 
         <div class="experience row">
             <div class="col-md-4">
-                <h4>Imagine Cup 2013</h4>
+                <h4>AAA</h4>
                 <p class="experience-period">
                     July 2013
                 </p>
@@ -255,7 +255,7 @@
 
         <div class="experience row">
             <div class="col-md-4">
-                <h4>Imagine Cup 2013</h4>
+                <h4>AAAA</h4>
                 <p class="experience-period">
                     July 2013
                 </p>
@@ -435,7 +435,7 @@
 
         <div class="experience row">
             <div class="col-md-4">
-                <h4>Imagine Cup 2012</h4>
+                <h4>SoftWare Tech</h4>
                 <p class="experience-period">
                     May 2013
                 </p>
@@ -477,7 +477,7 @@
                 <p>
                     <strong>Bachelor of Technology- Computer Science </strong>
                         <span class="hidden-phone">
-                            There was a whole bunch of things happening when I was in college. I was a Student Ambassador at Microsoft, We won Imagine Cup 2013. I've traveled to over 9 countries and participated in various student conferences and competitions like World Business Dialogue. All in all, It was amazing being in college.
+                            There was a whole bunch of things happening when I was in college. I was a Student Ambassador at Microsoft, We won AAAA. I've traveled to over 9 countries and participated in various student conferences and competitions like World Business Dialogue. All in all, It was amazing being in college.
                         </span>
                         <span class="experience-details">
                             <span class="location">
@@ -559,7 +559,7 @@
 
 
                     <li>
-                        <span class="ability-title">Windows Azure</span>
+                        <span class="ability-title">Windows Form</span>
                             <span class="ability-score">
 
 
@@ -634,7 +634,7 @@
 
 
                     <li>
-                        <span class="ability-title">Windows 8</span>
+                        <span class="ability-title">Android</span>
                             <span class="ability-score">
 
 
@@ -647,10 +647,10 @@
                                 <span class="glyphicon glyphicon-star filled"></span>
 
 
-                                <span class="glyphicon glyphicon-star filled"></span>
+                                <span class="glyphicon glyphicon-star "></span>
 
 
-                                <span class="glyphicon glyphicon-star filled"></span>
+                                <span class="glyphicon glyphicon-star "></span>
 
 
                             </span>
@@ -675,7 +675,7 @@
                                 <span class="glyphicon glyphicon-star filled"></span>
 
 
-                                <span class="glyphicon glyphicon-star filled"></span>
+                                <span class="glyphicon glyphicon-star "></span>
 
 
                             </span>
