--- a/index.html
+++ b/index.html
@@ -1272,13 +1272,13 @@
                         <li>
                             <a href="javascript:void(0);">
                                 <span class="icon icon-skype"></span>
-                                hungqt2011.info
+                                itfacker
                             </a>
                         </li>
                         <li>
-                            <a href="mailto:tuanhung.cntt@gmail.com">
+                            <a href="mailto:itfacker@gmail.com">
                                 <span class="icon icon-email"></span>
-                                tuanhung.cntt@gmail.com
+                                itfacker@gmail.com
                             </a>
                         </li>
                     </ul>
