change avatar and title

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <body data-spy="scroll" data-target="#navbar-example" class="fixed" ng-controller="MainController">
     <div id="top" class="jumbotron" data-position="center center" style="height: 280px;">
         <div class="container">
-            <h1>I'm Hung Le</h1>
+            <h1>My name Hung Le</h1>
             <br>
             <br>
             <p align="right" class="lead">| Developer |<br>| Coder |<br>| Loves to fly |<br>| Plays Tennis |</p>
@@ -84,11 +84,11 @@
                 <div class="col-md-4">
                     <h3>Details</h3>
                     <p>
-                        <strong>Name:</strong><br>
+                        <strong>Name:</strong>
                         Hung Le<br>
-                        <strong>Age:</strong><br>
+                        <strong>Age:</strong>
                         26 <br>
-                        <strong>Location:</strong><br>
+                        <strong>Location:</strong>
                         I'm a traveller.
                     </p>
                     <a href="https://twitter.com/itfacker" class="twitter-follow-button" data-show-count="false" data-size="large" data-show-screen-name="false" data-dnt="true">Follow @itfacker</a>
@@ -233,38 +233,6 @@
                     <strong>Worldwide Winner : Connected Planet Award</strong>
                         <span class="hidden-phone">
                             We built a smartphone app "Zoik it!" that helps you discover and connect to people and activities around you that you might be interested in.
-                        </span>
-                        <span class="experience-details">
-                            <span class="location">
-                                <span class="glyphicon glyphicon-map-marker"></span>
-                                St Petersburg, Russia.
-                            </span>
-
-
-                            <span class="seperator">|</span>
-                            <span class="link">
-                                <span class="glyphicon glyphicon-link"></span>
-                                <a href="http://www.imaginecup.com/" target="_blank">http://www.imaginecup.com/</a>
-                            </span>
-
-
-                        </span>
-                </p>
-            </div>
-        </div>
-
-        <div class="experience row">
-            <div class="col-md-4">
-                <h4>AAAA</h4>
-                <p class="experience-period">
-                    July 2013
-                </p>
-            </div>
-            <div class="col-md-8">
-                <p>
-                    <strong>Worldwide Winner : Windows Azure Challenge</strong>
-                        <span class="hidden-phone">
-                            Won the Windows Azure Award for the best use of the Cloud and Azure platform in our app "Zoik it!"
                         </span>
                         <span class="experience-details">
                             <span class="location">
