Change content interest box

--- a/index.html
+++ b/index.html
@@ -1177,9 +1177,9 @@
                 <img src="./images/cats.png" alt="My Cats" width="220" height="220">
             </div>
             <div class="col-md-8 interest-content">
-                <h3>Tennis</h3>
+                <h3>Volleyball</h3>
                 <p>
-                    I hate sports, but to keep my body and heart working, I play tennis. That's one game that I love playing every morning. I'm a hacker, I stay up on my computer all night and all day, but that's a couple of hours in my day where I go out, workout and play - for fun.
+                    I hate sports, but to keep my body and heart working, I play volleyball. That's one game that I love playing every morning. I'm a hacker, I stay up on my computer all night and all day, but that's a couple of hours in my day where I go out, workout and play - for fun.
                 </p>
             </div>
         </div>
@@ -1190,9 +1190,9 @@
                 <img src="./images/sports.png" alt="Sports" width="220" height="220">
             </div>
             <div class="col-md-8 interest-content">
-                <h3>Skating</h3>
+                <h3>Soccer</h3>
                 <p>
-                    I skate on almost everything be it skateboards, waveboards, or even roller blades. But I'm not a douchebag who thinks of himself as a god just because he skates. I'm respectful to the pedestrians around.
+                    Awesome! When you think like Jesus, anywhere you set your foot can be called home, and the world is your playground. Having a giving, servant's heart opens opportunities one never considered before
                 </p>
             </div>
         </div>
