change words site title

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <body data-spy="scroll" data-target="#navbar-example" class="fixed" ng-controller="MainController">
     <div id="top" class="jumbotron" data-position="center center" style="height: 280px;">
         <div class="container">
-            <h1>My name Hung Le</h1>
+            <h1>My name's [Hung Le]</h1>
             <br>
             <br>
             <p align="right" class="lead">| Developer |<br>| Coder |<br>| Loves to fly |<br>| Plays Tennis |</p>
