--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <h1>My name's [Hung Le]</h1>
             <br>
             <br>
-            <p align="right" class="lead">| Developer |<br>| Coder |<br>| Loves to fly |<br>| Plays Tennis |</p>
+            <p align="right" class="lead">| Developer |<br>| Coder |<br>| Loves to fly |<br>| Plays Soccer |</p>
         </div>
         <div class="overlay"></div>
         <a href="#profile" class="scroll-down">
