--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <li class=""><a href="#abilities">Abilities</a></li>
                 <li class=""><a href="#interests">Interests</a></li>
                 <li class=""><a href="#contact">Contact</a></li>
-                <li><a href="https://medium.com/@hungdha" target="_blank">Blog</a></li>
+                <li><a href="./hgApp">Blog</a></li>
             </ul>
         </div><!-- /.navbar-collapse -->
     </nav>
