--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         </div>
     </div>
 
-<div id="experiences" class="container" style="opacity: 0.1">
+<div id="experiences" class="container" >
     <h2>Experiences</h2>
     <p class="lead">
         Do not go where the path may lead<br>...go instead where there is no path and leave a trail.
@@ -1205,13 +1205,13 @@
                         <li>
                             <a href="http://twitter.com/itfacker" target="_blank">
                                 <span class="icon icon-twitter"></span>
-                                http://twitter.com/itfacker
-                            </a>
+                                Twitter
+                         	</a>
                         </li>
                         <li>
-                            <a href="http://linkedin.nl/in/itfacker/" target="_blank">
+                            <a href="#" target="_blank">
                                 <span class="icon icon-linkedin"></span>
-                                http://linkedin.nl/in/itfacker/
+                                LinkedIn
                             </a>
                         </li>
                     </ul>
@@ -1221,13 +1221,13 @@
                         <li>
                             <a href="javascript:void(0);">
                                 <span class="icon icon-skype"></span>
-                                itfacker
+                                Skype
                             </a>
                         </li>
                         <li>
-                            <a href="mailto:itfacker@gmail.com">
+                            <a href="mailto:tuanhung.cntt@gmail.com">
                                 <span class="icon icon-email"></span>
-                                itfacker@gmail.com
+                                Email
                             </a>
                         </li>
                     </ul>
